--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -29,10 +29,11 @@
         android:weightSum="2">
 
         <RelativeLayout
+            android:id="@+id/email_rl"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
             <android.support.design.widget.TextInputLayout
-                android:layout_marginTop="132dp"
+                android:layout_centerInParent="true"
                 android:layout_marginLeft="70dp"
                 android:layout_marginRight="80dp"
                 android:layout_marginBottom="8dp"
@@ -49,23 +50,23 @@
             </android.support.design.widget.TextInputLayout>
 
             <android.support.design.widget.TextInputLayout
-
+                android:layout_centerHorizontal="true"
                 android:layout_marginBottom="8dp"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
-                android:layout_marginTop="180dp"
+                android:layout_marginTop="200dp"
                 android:layout_marginLeft="70dp"
                 android:layout_marginRight="80dp">
 
                 <EditText
                     android:hint="@string/password"
                     android:id="@+id/et_password"
-
                     android:inputType="textPassword"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content" />
 
             </android.support.design.widget.TextInputLayout>
+
 
             <!--<TextView-->
             <!--android:id="@+id/tv_enterDirectly"-->
@@ -117,6 +118,7 @@
                 android:layout_centerHorizontal="true" />
 
         </RelativeLayout>
+
 
     </FrameLayout>
 
