--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -49,10 +49,10 @@
                 android:textColor="@android:color/white"
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
-                android:layout_marginTop="148dp"
+                android:layout_alignParentBottom="true"
                 android:layout_marginLeft="90dp"
                 android:layout_marginRight="90dp"
-                android:layout_marginBottom="8dp"
+                android:layout_marginBottom="88dp"
                 />
 
             <android.support.v7.widget.AppCompatButton
@@ -63,9 +63,11 @@
                 android:textColor="@android:color/white"
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
-                android:layout_marginTop="200dp"
-                android:layout_marginLeft="90dp"
-                android:layout_marginRight="90dp"/>
+                android:layout_marginRight="90dp"
+                android:layout_alignParentBottom="true"
+                android:layout_marginBottom="32dp"
+                android:layout_alignLeft="@+id/btn_chg_password"
+                android:layout_alignStart="@+id/btn_chg_password" />
 
             <android.support.v7.widget.AppCompatButton
                 android:layout_width="40dp"
