--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,8 @@
     <color name="textColorPrimary">#FFFFFF</color>
     <color name="WindowBackground">#FFFFFF</color>
     <color name="colorLightBlue">#03A9F4</color>
+
+    <color name="green">#8FCC85</color>
+    <color name="blue">#ff33b5e5</color>
+    <color name="white">#ffffff</color>
 </resources>
